javadocuri wireless appicaltion