@@ -1,7 +1,19 @@
 package com.example.wifidetection;
 
+import java.io.BufferedReader;
+import java.io.BufferedWriter;
+import java.io.File;
+import java.io.FileReader;
+import java.io.FileWriter;
+import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.StringTokenizer;
+import java.util.Timer;
+import java.util.TimerTask;
+import java.util.TreeMap;
+
+import android.util.Log;
 import android.view.View.OnClickListener;
 
 import org.achartengine.ChartFactory;
@@ -24,31 +36,72 @@ import android.view.View;
 import android.widget.Button;
 import android.widget.TextView;
 
+/**
+ * activity which initialize the components of the window and the WifiManager
+ * used for Wifi,
+ * starts scanning for acces points,
+ * compares the networks detected with the ones from its own database
+ * to establish the location
+ * 
+ * 
+ * @author vlad
+ * 
+ */
 public class MainActivity extends Activity
 {
 
+	/**
+	 * where the networks detected are shown
+	 */
 	TextView mainText;
+	/**
+	 * used for detecting the Wifi's acces points
+	 */
 	WifiManager mainWifi;
+	/**
+	 * used for receving the networks detected by the WifiManager
+	 */
 	WifiReceiver receiverWifi;
+	/**
+	 * cointains the networks detected
+	 */
 	List<ScanResult> wifiList;
+	/**
+	 * collects the information from Scan in order to put it in the TextView
+	 */
 	StringBuilder sb;
+	/**
+	 * used for showing the Chart made from the Wifi's signals
+	 */
 	Button showChartButton;
+	/**
+	 * contains the signals used for creating the Chart
+	 */
 	ArrayList<Integer> signalValueList;
+	/**
+	 * contains the networks names used for creating the Chart
+	 */
 	ArrayList<String> netNameList;
+	/**
+	 * creating from the values saved in the activity's history networks
+	 */
+	TreeMap<String, ArrayList<String>> locationNetPair;
+	
+	
+	/**
+	 *  using a timer to restart the scan by registering and unregistering the
+	 *  BroadcastReceiver
+	 */
+	Timer timeToScan;
 
 	public void onCreate(Bundle savedInstanceState)
 	{
 
 		super.onCreate(savedInstanceState);
 		setContentView(R.layout.activity_main);
-		
-		
-	//	de ce nu merge asta?
-	//   cand se salveaza starea ?
-	/*	if(savedInstanceState != null)
-			return;
-		
-	*/	
+
+		locationNetPair = new TreeMap<String, ArrayList<String>>();
+		timeToScan = new Timer();
 
 		this.mainText = (TextView) findViewById(R.id.mainText);
 		showChartButton = (Button) findViewById(R.id.buttonChart);
@@ -75,18 +128,37 @@ public class MainActivity extends Activity
 		// set as receiver for detected wireless WifiReceiver
 		registerReceiver(receiverWifi, new IntentFilter(
 				WifiManager.SCAN_RESULTS_AVAILABLE_ACTION));
+		
 		// start scanning
-		mainWifi.startScan();
-		mainText.setText("\\nStarting Scan...\\n");
+		Log.w("onCreate", "se intra iar in onCreate??");
+		
+	//	timeToScan.schedule(new TimerTask(){
+	//		public void run(){
+				mainWifi.startScan();
+	//		}
+			
+	//	},0,6000);
+		
 	}
-	
-	public void onRestart(){
-		super.onRestart();
-		//signalValueList = new ArrayList<Integer>();
-		//netNameList = new ArrayList<String>();
+	public void onDestroy(){
+		super.onDestroy();
+		
+		mainWifi.setWifiEnabled(false);
 	}
-	
+	public void onResume(){
+		super.onResume();
+		registerReceiver(receiverWifi, new IntentFilter(
+				WifiManager.SCAN_RESULTS_AVAILABLE_ACTION));
+	}
+	public void onPause(){
+		super.onPause();
+		this.unregisterReceiver(receiverWifi);
+	}
 
+	/**
+	 * method called from clicking the button for showing the chart
+	 * establishes the objects used for showing the chart
+	 */
 	public void makeChart()
 	{
 
@@ -94,8 +166,9 @@ public class MainActivity extends Activity
 		XYSeries netWorkSignalsSeries = new XYSeries("Wifi signal-level");
 		// Creating an XYSeries for Expense
 		// Adding data to Income and Expense Series
-		for (int i = 0; i < signalValueList.size(); i++)
-			netWorkSignalsSeries.add(i, 0 - signalValueList.get(i));
+		int index = 0;
+		for (Integer value : signalValueList)
+			netWorkSignalsSeries.add(index++, 0 - value);
 
 		// Creating a dataset to hold each series
 		XYMultipleSeriesDataset dataset = new XYMultipleSeriesDataset();
@@ -131,17 +204,121 @@ public class MainActivity extends Activity
 				dataset, multiRenderer, Type.DEFAULT);
 
 		// Start Activity
+		
 		startActivity(intent);
+	}
+
+	/**
+	 * from comparing the networks detected with the ones saved in history
+	 * in case the location is new, we create a new entry in history with
+	 * a new location name and the networks detected in this location
+	 */
+	public void writeNewWifiLocation()
+	{
+
+		String wireless = new String("WirelessNetworks");
+		try
+		{
+			File file = new File(getFilesDir(), wireless);
+
+			BufferedWriter bw = new BufferedWriter(
+					new FileWriter(file, true));
+			bw.append("NewWifiLocation: Location1" + "\n");
+
+			bw.append(mainText.getText());
+			bw.close();
+
+			mainText.setText("");
+
+			BufferedReader br = new BufferedReader(new FileReader(file));
+			String line;
+			while ((line = br.readLine()) != null)
+			{
+				mainText.append(line + "\n");
+			}
+			br.close();
+		//	this.deleteFile(wireless);
+
+		}
+		catch (IOException e)
+		{
+			mainText.setText("error");
+		}
+	}
+
+	/**
+	 * comparing the networks detected with the ones from history to know
+	 * if it's about a new location ( which will be inserted in the history
+	 * file)
+	 * or an old location from which we can find the server's ip
+	 */
+	public void compareLocation()
+	{
+
+		String wireless = new String("WirelessNetworks");
+		try
+		{
+			File file = new File(getFilesDir(), wireless);
+			BufferedReader br = new BufferedReader(new FileReader(file));
+			String linie;
+			ArrayList<String> al = new ArrayList<String>();
+
+			while ((linie = br.readLine()) != null)
+			{
+
+				StringTokenizer st = new StringTokenizer(linie, " ");
+				String s = st.nextToken();
+				if (s.compareTo("NewWifiLocation:") == 0)
+				{
+
+					al = locationNetPair.get(st.nextToken());
+					
+				}
+
+				if (s.compareTo("Netname:") == 0)
+					al.add(st.nextToken());
+
+				br.close();
+
+			}
+
+		}
+		catch (IOException e)
+		{
+
+			mainText.setText("error");
+		}
 	}
 
 }
 
+/**
+ * class with the purpose of receiving the networks detected and filling the
+ * mainActivity's members with the values detected
+ * 
+ * 
+ * @author vlad
+ * 
+ */
 class WifiReceiver extends BroadcastReceiver
 {
 
+	/**
+	 * instance of MainActivity in order to populate its members
+	 */
 	MainActivity main;
+	/**
+	 * in case the user's pushes the button to show the graph without the
+	 * scanning to be complet
+	 */
 	boolean readyScan;
 
+	/**
+	 * 
+	 * @param mainReceived
+	 *             : instance of the MainActivity in order to populate
+	 *             its members
+	 */
 	WifiReceiver(MainActivity mainReceived)
 	{
 
@@ -151,7 +328,7 @@ class WifiReceiver extends BroadcastReceiver
 
 	public void onReceive(Context c, Intent intent)
 	{
-		
+		Log.w("new Scan", "S-a scanat iar, s-a intrat iar in onReceive");
 		main.signalValueList.clear();
 		main.netNameList.clear();
 
@@ -160,8 +337,10 @@ class WifiReceiver extends BroadcastReceiver
 
 		for (int i = 0; i < main.wifiList.size(); i++)
 		{
-			main.sb.append(new Integer(i + 1).toString() + ".");
-			main.sb.append("Netname:" + main.wifiList.get(i).SSID + "\n");
+		//	main.sb.append(Integer.valueOf(i + 1).toString() + ".");
+			
+			main.sb.append("Netname: " + main.wifiList.get(i).SSID + "\n");
+		//	main.sb.append("Adress: " + main.wifiList.get(i).BSSID + "\n");
 			main.sb.append("Frecventa: " + main.wifiList.get(i).frequency
 					+ "\n");
 			main.sb.append("Semnal(dB): " + main.wifiList.get(i).level);
@@ -174,6 +353,9 @@ class WifiReceiver extends BroadcastReceiver
 		}
 		main.mainText.setText(main.sb);
 		readyScan = true;
-
+		// main.compareLocation();
+		main.writeNewWifiLocation();
+		main.mainWifi.setWifiEnabled(false);
 	}
+
 }
